更新数据库